# hashcards

./: CHANGELOG.xml  Cargo.toml  hashcards.db  pre-commit.sh
example/: French.md  Geography.md  Quotes.md
src/: parser.rs
src/cmd/drill/: cache.rs  post.rs
src/media/: validate.rs
src/types/: card.rs
test/: Deck.md
